--- a/javascript-basics-01/Step_2.html
+++ b/javascript-basics-01/Step_2.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 2</title>
         <meta charset="UTF-8">
+        <script src="./step_2.js"></script>
     </head>
     <body>
     </body>
