--- a/javascript-basics-01/Step_3.html
+++ b/javascript-basics-01/Step_3.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 3</title>
         <meta charset="UTF-8">
+        <script src="./step_3.js"></script>
     </head>
     <body>
     </body>
