--- a/javascript-basics-01/Step_4.html
+++ b/javascript-basics-01/Step_4.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 4</title>
         <meta charset="UTF-8">
+        <script src="./step_4.js"></script>
     </head>
     <body>
         <form>
