--- a/javascript-basics-01/Step_5.html
+++ b/javascript-basics-01/Step_5.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 5</title>
         <meta charset="UTF-8">
+        <script src="./step_5.js"></script>
     </head>
     <body>
         <form>
