--- a/javascript-basics-01/Step_6.html
+++ b/javascript-basics-01/Step_6.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 6</title>
         <meta charset="UTF-8">
+        <script src="./step_6.js"></script>
     </head>
     <body>
         <form>
