--- a/javascript-basics-01/Step_4.html
+++ b/javascript-basics-01/Step_4.html
@@ -3,14 +3,15 @@
     <head>
         <title>Step 4</title>
         <meta charset="UTF-8">
-        <script src="./step_4.js"></script>
+        
     </head>
     <body>
         <form>
             <label for="name">name : </label><input type="text" name="name" id="name"/>
             <label for="surname">surname : </label><input type="text" name="surname" id="surname"/>
             <label for="city">city : </label><input type="text" name="city" id="city"/>
-            <button  name="validate" id="validate">Validate</button>
+            <button  name="validate" id="validate" onclick="">Validate</button>
         </form>
+        <script src="./step_4.js"></script>
     </body>
 </html>
