--- a/javascript-basics-01/Step_7.html
+++ b/javascript-basics-01/Step_7.html
@@ -3,6 +3,7 @@
     <head>
         <title>Step 7</title>
         <meta charset="UTF-8">
+        <script src="./step_7.js"></script>
     </head>
     <body>
         <form>
