--- a/javascript-basics-01/Step_5.html
+++ b/javascript-basics-01/Step_5.html
@@ -3,13 +3,14 @@
     <head>
         <title>Step 5</title>
         <meta charset="UTF-8">
-        <script src="./step_5.js"></script>
+        
     </head>
     <body>
         <form>
             <label for="first_number">first number : </label><input type="text" id="first_number" name="first_number"/><br/>
             <label for="second_number">second number : </label><input type="text" id="second_number" name="second_number"/><br/>
-            <button  id="validate" name ="validate">validate</button>
+            <button  id="validate" name ="validate" onclick="">validate</button>
         </form>
+        <script src="./step_5.js"></script>
     </body>
 </html>
