--- a/javascript-basics-02/step 2/index.html
+++ b/javascript-basics-02/step 2/index.html
@@ -8,5 +8,6 @@
   <form>
     <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
   </form>
+  <script src="./step_2.js"></script>
 </body>
 </html>
