--- a/javascript-basics-02/step 3/index.html
+++ b/javascript-basics-02/step 3/index.html
@@ -8,5 +8,10 @@
   <form>
     <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
   </form>
+  <div id="demo">
+    
+  </div>
+
+  <script src="./step_3.js"></script>
 </body>
 </html>
