--- a/javascript-basics-02/step 4/index.html
+++ b/javascript-basics-02/step 4/index.html
@@ -11,5 +11,6 @@
     <label for="city">Your city  : </label><input type="text" name="city" value="New York" id="city" />
     <button type="button" name="button">Reset</button>
   </form>
+  <script src="./step_4.js"></script>
 </body>
 </html>
