--- a/javascript-basics-02/step 6/index.html
+++ b/javascript-basics-02/step 6/index.html
@@ -10,5 +10,8 @@
       <img src="images/image3.jpg" id="image3" />
       <img src="images/image4.jpg" id="image4" />
       <img src="images/image5.jpg" id="image5" />
+
+
+      <script src="./step_6.js"></script>
   </body>
 </html>
