--- a/javascript-basics-03/step 4/index.html
+++ b/javascript-basics-03/step 4/index.html
@@ -9,6 +9,8 @@
     <label for="password">password : </label><input type="text" name="password" value="" id="password" />
     <label for="confirmation">Confirm : </label><input type="text" name="confirmation" value="" id="confirmation" />
     <button type="button" name="button" >Test</button>
+  
   </form>
+  <script src="./step_4.js"></script>
 </body>
 </html>
