--- a/javascript-basics-02/step 4/index.html
+++ b/javascript-basics-02/step 4/index.html
@@ -9,7 +9,7 @@
     <label for="name">Your name  : </label><input type="text" name="name" value="Doe" id="name" />
     <label for="surname">Your surname  : </label><input type="text" name="surname" value="John" id="surname" />
     <label for="city">Your city  : </label><input type="text" name="city" value="New York" id="city" />
-    <button type="button" name="button">Reset</button>
+    <button type="button" onclick="set()" name="button">Reset</button>
   </form>
   <script src="./step_4.js"></script>
 </body>
